gitops/environments/prod/apps/dndn-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-api
  labels:
    app.kubernetes.io/part-of: dndn
