gitops/environments/prod/apps/dndn-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dndn-api
  namespace: dndn-api
  labels:
    app: dndn-api
spec:
  type: ClusterIP
  selector:
    app: dndn-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
